--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
+  - python=3.6
   - numpy
   - psutil
   - toolz
@@ -11,3 +12,5 @@ dependencies:
   - partd
   - bokeh
   - dask
+  - tensorflow
+  
