--- a/environment.yml
+++ b/environment.yml
@@ -82,6 +82,7 @@ dependencies:
     - prompt-toolkit==3.0.10
     - protobuf==3.14.0
     - ptyprocess==0.7.0
+    - pyyaml
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
     - pycparser==2.20
@@ -98,6 +99,7 @@ dependencies:
     - rsa==4.7
     - send2trash==1.5.0
     - six==1.15.0
+    - sklearn
     - tensorboard==2.4.0
     - tensorboard-plugin-wit==1.7.0
     - tensorflow==2.4.0
@@ -105,4 +107,5 @@ dependencies:
     - termcolor==1.1.0
     - testpath==0.4.4
     - tornado==6.1
+    - urllib
   
