--- a/environment.yml
+++ b/environment.yml
@@ -20,7 +20,8 @@ dependencies:
   - partd
   - bokeh
   - dask
-  - sklearn
+  - scikit-learn
+  - spicy
   - pyyaml
   - urllib
   - pip : 
@@ -100,6 +101,7 @@ dependencies:
     - requests-oauthlib==1.3.0
     - rsa==4.7
     - send2trash==1.5.0
+    - sklearn
     - six==1.15.0
     - tensorboard==2.4.0
     - tensorboard-plugin-wit==1.7.0
